# niks3

./: .envrc  .gitignore  .golangci.yml  .goreleaser.yaml  .mergify.yml  .sqlfluff  CONTRIBUTING.md  LICENSE  README.md  action.yml  auth_test.go  closure.go  closure_model.go  complete_upload_model.go  db.go  default.nix  flake.nix  go.mod  go.sum  health.go  health_test.go  main.go  main_test.go  matchers_test.go  minio_test.go  objects_model.go  pending_closure_model.go  postgres_test.go  request_test.go  reset-db.sh  server.go  sqlc.yml  start_upload_model.go  uploads.go  uploads_test.go
.github/: dependabot.yml  release.yml
action/: package-lock.json  package.json  tsconfig.json
api/: health.go  server.go  types.go
client/: Cargo.toml  auth_test.go  buildlog.go  cache_config.go  client.go  export_test.go  gc.go  listener.go  listener_test.go  listing.go  listing_retention_test.go  listing_test.go  metadata_tasks.go  multipart.go  multipart_size_test.go  multipart_superseded_test.go  nar.go  nar_bench_test.go  nar_prefetch.go  nar_task.go  nar_test.go  nar_upload.go  narinfo.go  nixbase32.go  nixbase32_test.go  nixstore.go  nixstore_test.go  oidc_github.go  oidc_github_test.go  parallel.go  pending_closure.go  pending_closure_test.go  pin.go  ratelimit_test.go  resolve_test.go  retry.go  retry_test.go  shellsplit.go  shellsplit_test.go  simple_uploads.go  (+6 more)
client/src/: lib.rs  main.rs  nar.rs  narinfo.rs  nix_base32.rs  nix_store.rs  upload.rs
cmdutil/: cmdutil.go
db/: db.go
hook/: client.go  client_test.go  protocol.go  queue.go  queue_test.go  server.go  (+3 more)
(+138 files in other folders)
